--- a/index.html
+++ b/index.html
@@ -1,11 +1,44 @@
-<!DOCTYPE html>
+<!DOCTYaE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <nav> 
+            <ul>
+                <li>
+                    <span id="LogoParent">
+                   <img src="Img/logo.svg" alt="">
+                   <a href="#" class="Montserrat M600 T1">Sendpay</a>
+                </span>
+                </li>
+                <li><div class="Space S1"></div></li>
+                <li>
+                    <a href="#" class="Montserrat M700">send money</a>
+                </li>
+                <li>
+                    <a href="#" class="Montserrat M700">recieve money</a>
+                </li>
+                <li>
+                    <a href="#" class="Montserrat M700">language</a>
+                </li>
+                <li><div class="Space S2"></div></li>
+                <li>
+                    <a href="#" class="Montserrat M700">How it works</a>
+                </li>
+               
+                <li>
+                    <a href="#" class="Montserrat M700 Button B1">Sign in</a>
+                </li>
+                <li>
+                    <a href="#" class="Montserrat M700 Button B2">Register</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
