--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <a href="#" class="Montserrat M700">How it works</a>
                 </li>
                
-                <li>
+                <li class="ButtonParent1">
                     <a href="#" class="Montserrat M700 Button B1">Sign in</a>
                 </li>
                 <li>
