Logo changed from svg to png

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <ul>
                 <li>
                     <span id="LogoParent">
-                   <img src=".Img/logo.svg" alt="">
+                   <img src="./Img/logo.png" alt="">
                    <a href="#" class="Montserrat M600 T1">Sendpay</a>
                 </span>
                 </li>
