--- a/index.html
+++ b/index.html
@@ -39,6 +39,18 @@
                 </li>
             </ul>
         </nav>
+
+        <!-- Container for under nav element -->
+        <div>
+         <div class="Container C1">
+             <h1 class="Montserrat M600 T2">
+                Sending Money is 
+                Easier than before
+             </h1>
+             <div id="Border1"></div>
+         </div>
+        </div>
+         <!-- //Container for under nav element -->
     </header>
 </body>
 </html>
