P and buttons added

--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@
                 Easier than before
              </h1>
              <div id="Border1"></div>
+             <p class="Montserrat M400 T3">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed consectetur libero. Curabitur.
+             </p>
+
+             <ul class="UL">
+                 <li><a href="#" class="Montserrat M500 Button B4">Register</a></li>
+                 <li><a href="#" class="Montserrat M500 Button B3">learn more</a></li>
+             </ul>
          </div>
         </div>
          <!-- //Container for under nav element -->
