--- a/index.html
+++ b/index.html
@@ -241,6 +241,8 @@
             <p class="Montserrat M600 T20">Designer</p>
         </div>
           </div>
+
+          <img class="Circle2" src="./Img/Circle.png" alt="">
         </div>
       </div>
     </main>
