Develop of footer began, new fonts and images added

--- a/index.html
+++ b/index.html
@@ -245,6 +245,67 @@
           <img class="Circle2" src="./Img/Circle.png" alt="">
         </div>
       </div>
+
+      <footer>
+          <!-- Main container -->
+          <div class="Container C14">
+          <!-- Left container -->
+          <div class="Container C12">
+              <div class="Container C13">
+            <p class="Montserrat M600 T23">em...</p>
+            <div id="LogoParent2">
+                
+                <img src="./Img/logo.png" alt="" />
+                <a href="#" class="Montserrat M600 T24">Sendpay</a>
+                
+            </div>
+            <p class="Montserrat M600 T25">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis in aliquet justo.</p>
+          </div>
+        </div>
+        <!-- Left container end -->
+        <!-- Right container -->
+        <div class="Container C15"> 
+            <ul>
+                <p class="Montserrat M600 T26">Products</p>
+                <li class="Montserrat M600 T27"><a href="#">Products</a></li>
+                <li class="Montserrat M600 T27"><a href="#">Products</a></li>
+                <li class="Montserrat M600 T27"><a href="#">Products</a></li>
+            </ul>
+        </div>
+
+        <div class="Container C15"> 
+            <ul>
+                <p class="Montserrat M600 T26">About</p>
+                <li class="Montserrat M600 T27"><a href="#">About</a></li>
+                <li class="Montserrat M600 T27"><a href="#">About</a></li>
+                <li class="Montserrat M600 T27"><a href="#">About</a></li>
+                <li class="Montserrat M600 T27"><a href="#">About</a></li>
+            </ul>
+        </div>
+
+        <div class="Container C15"> 
+            <ul>
+                <p class="Montserrat M600 T26">Catalog</p>
+                <li class="Montserrat M600 T27"><a href="#">Catalog</a></li>
+                <li class="Montserrat M600 T27"><a href="#">Catalog</a></li>
+                <li class="Montserrat M600 T27"><a href="#">Catalog</a></li>
+            </ul>
+        </div>
+
+        <div class="Container C15">
+            <div class="Container C16">
+            <ul>
+                <p class="Montserrat M800 T26">Social Contacts</p>
+                <li class="Montserrat M600 T27"><a href="#">Catalog</a></li>
+                <li class="Montserrat M600 T27"><a href="#">Catalog</a></li>
+                <li class="Montserrat M600 T27"><a href="#">Catalog</a></li>
+            </ul>
+        </div>
+        </div>
+        <!-- Right container end -->
+    </div>
+        <!-- Main container end -->
+      </footer>
     </main>
   </body>
 </html>
