Footer will be finished and site to. Adavtive view left

--- a/index.html
+++ b/index.html
@@ -292,13 +292,13 @@
             </ul>
         </div>
 
-        <div class="Container C15">
+        <div class="Container C17">
             <div class="Container C16">
             <ul>
-                <p class="Montserrat M800 T26">Social Contacts</p>
-                <li class="Montserrat M600 T27"><a href="#">Catalog</a></li>
-                <li class="Montserrat M600 T27"><a href="#">Catalog</a></li>
-                <li class="Montserrat M600 T27"><a href="#">Catalog</a></li>
+                <p class="Montserrat M800 T28">Social Contacts</p>
+                <li class="Montserrat M500 T27 T29"><a href="#">facebook</a> <img id="T30" src="./Img/FB.png" alt=""></li>
+                <li class="Montserrat M500 T27 T29"><a href="#" >Github</a><img id="T31" src="./Img/GT.png" alt=""></li>
+                <li class="Montserrat M500 T27 T29"><a href="#">Twitter</a><img id="T32" src="./Img/TW.png" alt=""></li>
             </ul>
         </div>
         </div>
