Adaptive for header added

--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
               <a href="#" class="Montserrat M600 T1">Sendpay</a>
             </span>
           </li>
-          <li><div class="Space S1"></div></li>
-          <li>
+          <li class="IsCanDisable"><div class="Space S1"></div></li>
+          <li class="Outline">
             <a href="#" class="Montserrat M700">send money</a>
           </li>
-          <li>
+          <li class="Outline">
             <a href="#" class="Montserrat M700">recieve money</a>
           </li>
-          <li>
+          <li class="Outline">
             <a href="#" class="Montserrat M700">language</a>
           </li>
-          <li><div class="Space S2"></div></li>
-          <li>
+          <li class="IsCanDisable"><div class="Space S2"></div></li>
+          <li class="Outline">
             <a href="#" class="Montserrat M700">How it works</a>
           </li>
 
