How it works block adaptive added

--- a/index.html
+++ b/index.html
@@ -79,8 +79,26 @@
         <!-- Container for circle images -->
         <div class="Container C3">
           <img src="./Img/E1.png" alt="" />
+          <div class="IMGU _1 IsCanDisableC3">
+            <h2 class="Montserrat M600 T7">In-app transer</h2>
+            <p class="Montserrat M600 T6">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec p
+            </p>
+          </div>
           <img src="./Img/E2.png" alt="" />
+          <div class="IMGU _1 IsCanDisableC3">
+            <h2 class="Montserrat M600 T7">In-app transer</h2>
+            <p class="Montserrat M600 T6">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec p
+            </p>
+          </div>
           <img src="./Img/E3.png" alt="" />
+          <div class="IMGU _1 IsCanDisableC3">
+            <h2 class="Montserrat M600 T7">In-app transer</h2>
+            <p class="Montserrat M600 T6">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec p
+            </p>
+          </div>
         </div>
         <div class="Img__Under">
           <div class="IMGU _1">
