Adaptive for people are saying about us added

--- a/index.html
+++ b/index.html
@@ -236,8 +236,21 @@
         </div>
           </div>
 
+          <!-- Default invisible -->
+          <div class="Container Card1 Inv">
+            <p class="Montserrat M500I T18">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis in aliquet justo. Nulla varius vitae.
+            </p>
+            <img class="img3" src="./Img/E7.png" alt="">
+            <div class="Container C11">
+            <h2 class="Montserrat M600 T19">Dev opter</h2>
+            <p class="Montserrat M600 T20">Designer</p>
+        </div>
+          </div>
+<!-- Default invisible -->
 
-          <div class="Container Card2">
+<!-- Default visible -->
+        <div class="Container Card2 Vis">
             <p class="Montserrat M500I T21">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis in aliquet justo. Nulla varius vitae.
             </p>
@@ -259,7 +272,7 @@
             <p class="Montserrat M600 T20">Designer</p>
         </div>
           </div>
-
+<!-- Default visible -->
           <img class="Circle2" src="./Img/Circle.png" alt="">
         </div>
       </div>
