--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
+    <!-- Header element -->
     <header>
       <nav>
         <ul>
@@ -66,6 +67,7 @@
       </div>
       <!-- //Container for under nav element -->
     </header>
+    <!-- Header element -->
     <main>
       <!-- Container for How it works and under it elements  -->
       <div class="Container C2">
