--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- Header element -->
     <header>
       <nav>
+        <!-- Header's ul element -->
         <ul>
           <li>
             <span id="LogoParent">
@@ -39,6 +40,7 @@
             <a href="#" class="Montserrat M700 Button B2">Register</a>
           </li>
         </ul>
+        <!-- Header's ul element -->
       </nav>
 
       <!-- Container for under nav element -->
