--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           <img src="./Img/img3.png" id="img3" alt="" />
           <a href="#" class="Montserrat M600 T13">Sendpay</a>
         </div>
-        <div id="Container C5_1">
+        <div>
           <span class="Montserrat M600 T11">We are giving Services</span>
           <img src="./Img/logo.png" id="Bottom__Logo" alt="" />
           <div id="Border4"></div>
