--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYaE html>
+<!DOCTYaE html><!-- Without this error site will broke -->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
