--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
       <!-- Right container -->
       <div class="Container C15"> 
           <ul>
-              <p class="Montserrat M600 T26">Products</p>
+              <li class="T27"><p class="Montserrat M600 T26">Products</p></li>
               <li class="Montserrat M600 T27"><a href="#">Products</a></li>
               <li class="Montserrat M600 T27"><a href="#">Products</a></li>
               <li class="Montserrat M600 T27"><a href="#">Products</a></li>
@@ -318,7 +318,8 @@
 
       <div class="Container C15"> 
           <ul>
-              <p class="Montserrat M600 T26">About</p>
+            <li class="T27"><p class="Montserrat M600 T26">About</p></li>
+              
               <li class="Montserrat M600 T27"><a href="#">About</a></li>
               <li class="Montserrat M600 T27"><a href="#">About</a></li>
               <li class="Montserrat M600 T27"><a href="#">About</a></li>
@@ -328,7 +329,8 @@
 
       <div class="Container C15"> 
           <ul>
-              <p class="Montserrat M600 T26">Catalog</p>
+              <li class="T27"><p class="Montserrat M600 T26">Catalog</p></li>
+              
               <li class="Montserrat M600 T27"><a href="#">Catalog</a></li>
               <li class="Montserrat M600 T27"><a href="#">Catalog</a></li>
               <li class="Montserrat M600 T27"><a href="#">Catalog</a></li>
